--- a/index.html
+++ b/index.html
@@ -25,7 +25,12 @@
                 </div>
             </div>
         </div>
-        <h3 style="margin-top: 100px;">Mean: 264</h3>
+        <h3 style="margin-top: 100px;" id="mean"></h3>
+        <h3 style="margin-top: 25px;" id="median"></h3>
+        <h3 style="margin-top: 25px;" id="mode"></h3>
+        <h3 style="margin-top: 25px;" id="q1"></h3>
+        <h3 style="margin-top: 25px;" id="q3"></h3>
+        <h3 style="margin-top: 25px;" id="outliers"></h3>
     </div>
  
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/chart.js/dist/chart.umd.min.js"></script>
