--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         <h3 style="margin-top: 25px;" id="q1"></h3>
         <h3 style="margin-top: 25px;" id="q3"></h3>
         <h3 style="margin-top: 25px;" id="outliers"></h3>
+        <h3 style="margin-top: 25px;" id="iqr"></h3>
     </div>
  
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/chart.js/dist/chart.umd.min.js"></script>
